# todo-app-actix

./: Cargo.toml  Procfile  README.md  RustConfig  sqlx-data.json
migrations/: 20220724060943_create_tasks_table.up.sql
src/: main.rs  user.rs
src/controllers/: tasks.rs
src/feat/task/: controller.rs  domain.rs  dto.rs  mod.rs  model.rs  routes.rs
